--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,8 +1,8 @@
-- name: Milan P Allan
+- name: Haonan Ling
   photo: Milan1.jpg
-  info: Associate professor, started Jan 2015
-  email: milan.allan@gmail.com
-  number_educ: 5
+  info: Assistant Professor, starting Jan 2025
+  email: haonan.ling@ucf.edu
+  number_educ: 4
   education1: Master ETHZ, Diplomarbeit with <a href="http://www.physik.uzh.ch/groups/osterwalder/">J Osterwalder</a>, University of Zurich
   education2: PhD St Andrews (while at Cornell University) with <a href="http://dpmc.unige.ch/gr_baumberger/index.html">Felix Baumberger</a> and <a href="http://davisgroup.lassp.cornell.edu/">JC Davis</a>
   education3: Postdoc Cornell
