--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -123,8 +123,8 @@
 #  education4:
 
 - name: "This could be you !"
-  photo: rock.jpg
-  info: See <a href="http://www.allanlab.org/vacancies">openings</a> for more info
+  photo: knightro.png
+  info: See <a href="http://haonan-ling.github.io/opportunities">opportunities</a> for more info
   email: milan.allan@gmail.com
   number_educ: 0
   education1:
