--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -124,7 +124,7 @@
 
 - name: "This could be you !"
   photo: knightro.png
-  info: See <a href="http://haonan-ling.github.io/opportunities">opportunities</a> for more info
+  info: See <a href="http://haonan-ling.github.io/vacancies">opportunities</a> for more info
   email: milan.allan@gmail.com
   number_educ: 0
   education1:
